test-package-compiler/tests/snapshots/compiler_tests__empty_method_body_lexer.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("Actor"), span: Span { start: 244, end: 249 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// Test empty method bodies (BT-859)"), Whitespace("\n"), LineComment("// Empty method bodies are a compile-time error."), Whitespace("\n"), LineComment("// Developers must use `self notImplemented` or `self subclassResponsibility` instead."), Whitespace("\n\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("subclass:"), span: Span { start: 250, end: 259 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("EmptyActor"), span: Span { start: 260, end: 270 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Keyword("state:"), span: Span { start: 273, end: 279 }, leading_trivia: [Whitespace("\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("value"), span: Span { start: 280, end: 285 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("="), span: Span { start: 286, end: 287 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("0"), span: Span { start: 288, end: 289 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("class"), span: Span { start: 293, end: 298 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("classEmpty"), span: Span { start: 299, end: 309 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 310, end: 312 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("doNothing"), span: Span { start: 316, end: 325 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 326, end: 328 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("getValue"), span: Span { start: 332, end: 340 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 341, end: 343 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("self"), span: Span { start: 344, end: 348 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Period, span: Span { start: 348, end: 349 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("value"), span: Span { start: 349, end: 354 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 355, end: 355 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
