test-package-compiler/tests/snapshots/compiler_tests__empty_method_body_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [
        ClassDefinition {
            name: Identifier {
                name: "EmptyActor",
                span: Span {
                    start: 260,
                    end: 270,
                },
            },
            superclass: Some(
                Identifier {
                    name: "Actor",
                    span: Span {
                        start: 244,
                        end: 249,
                    },
                },
            ),
            superclass_package: None,
            class_kind: Actor,
            is_abstract: false,
            is_sealed: false,
            is_typed: false,
            is_internal: false,
            supervisor_kind: None,
            state: [
                StateDeclaration {
                    name: Identifier {
                        name: "value",
                        span: Span {
                            start: 280,
                            end: 285,
                        },
                    },
                    type_annotation: None,
                    default_value: Some(
                        Literal(
                            Integer(
                                0,
                            ),
                            Span {
                                start: 288,
                                end: 289,
                            },
                        ),
                    ),
                    declared_keyword: State,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 273,
                        end: 289,
                    },
                },
            ],
            methods: [
                MethodDefinition {
                    selector: Unary(
                        "doNothing",
                    ),
                    parameters: [],
                    body: [],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 316,
                        end: 325,
                    },
                },
                MethodDefinition {
                    selector: Unary(
                        "getValue",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: FieldAccess {
                                receiver: Identifier(
                                    Identifier {
                                        name: "self",
                                        span: Span {
                                            start: 344,
                                            end: 348,
                                        },
                                    },
                                ),
                                field: Identifier {
                                    name: "value",
                                    span: Span {
                                        start: 349,
                                        end: 354,
                                    },
                                },
                                span: Span {
                                    start: 344,
                                    end: 354,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 332,
                        end: 354,
                    },
                },
            ],
            class_methods: [
                MethodDefinition {
                    selector: Unary(
                        "classEmpty",
                    ),
                    parameters: [],
                    body: [],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: true,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 293,
                        end: 298,
                    },
                },
            ],
            class_variables: [],
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 244,
                            end: 249,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 244,
                            end: 249,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test empty method bodies (BT-859)",
                        span: Span {
                            start: 244,
                            end: 249,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "Empty method bodies are a compile-time error.",
                        span: Span {
                            start: 244,
                            end: 249,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Developers must use `self notImplemented` or `self subclassResponsibility` instead.",
                        span: Span {
                            start: 244,
                            end: 249,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: true,
            },
            doc_comment: None,
            backing_module: None,
            handle_scope: None,
            shape_version: None,
            type_params: [],
            superclass_type_args: [],
            span: Span {
                start: 244,
                end: 354,
            },
        },
    ],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [],
    span: Span {
        start: 244,
        end: 354,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}
