test-package-compiler/tests/snapshots/compiler_tests__empty_method_body_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (2):
  - Method `doNothing` has an empty body
  - Method `classEmpty` has an empty body
