test-package-compiler/tests/snapshots/compiler_tests__error_malformed_message_codegen.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: core_erlang
---
module 'error_malformed_message' ['start_link'/1, 'init'/1, 'handle_cast'/2, 'handle_call'/3, 'code_change'/3, 'terminate'/2, 'dispatch'/3, 'safe_dispatch'/3, 'method_table'/0, 'spawn'/0, 'spawn'/1]
  attributes ['behaviour' = ['gen_server']]

'start_link'/1 = fun (InitArgs) ->
    call 'gen_server':'start_link'('error_malformed_message', InitArgs, [])


'spawn'/0 = fun () ->
    case call 'gen_server':'start_link'('error_malformed_message', ~{}~, []) of
        <{'ok', Pid}> when 'true' ->
            Pid
        <{'error', Reason}> when 'true' ->
            call 'erlang':'error'({'spawn_failed', Reason})
    end


'spawn'/1 = fun (InitArgs) ->
    case call 'gen_server':'start_link'('error_malformed_message', InitArgs, []) of
        <{'ok', Pid}> when 'true' ->
            Pid
        <{'error', Reason}> when 'true' ->
            call 'erlang':'error'({'spawn_failed', Reason})
    end


'init'/1 = fun (InitArgs) ->
    let DefaultState = ~{
        '__class__' => 'ErrorMalformedMessage',
        '__methods__' => call 'error_malformed_message':'method_table'()
    }~
    in let FinalState = call 'maps':'merge'(DefaultState, InitArgs)
    in {'ok', FinalState}


'handle_cast'/2 = fun (Msg, State) ->
    case Msg of
        <{Selector, Args, FuturePid}> when 'true' ->
            case call 'error_malformed_message':'safe_dispatch'(Selector, Args, State) of
                <{'reply', Result, NewState}> when 'true' ->
                    let _Ignored = call 'erlang':'!'(FuturePid, {'resolved', Result})
                    in {'noreply', NewState}
                <{'error', Error, NewState}> when 'true' ->
                    let _Ignored = call 'erlang':'!'(FuturePid, {'rejected', Error})
                    in {'noreply', NewState}
            end
    end


'handle_call'/3 = fun (Msg, _From, State) ->
    case Msg of
        <{Selector, Args}> when 'true' ->
            case call 'error_malformed_message':'safe_dispatch'(Selector, Args, State) of
                <{'reply', Result, NewState}> when 'true' ->
                    {'reply', {'ok', Result}, NewState}
                <{'error', Error, NewState}> when 'true' ->
                    {'reply', {'error', Error}, NewState}
            end
    end


'code_change'/3 = fun (_OldVsn, State, _Extra) ->
    %% TODO: Add state migration logic
    {'ok', State}


'terminate'/2 = fun (Reason, State) ->
    %% Call terminate method if defined (Flavors pattern)
    case call 'error_malformed_message':'dispatch'('terminate', [Reason], State) of
        <{'reply', _TermResult, _TermState}> when 'true' -> 'ok'
        <{'error', _TermError, _TermState2}> when 'true' -> 'ok'
        <_TermOther> when 'true' -> 'ok'
    end


'safe_dispatch'/3 = fun (Selector, Args, State) ->
    try call 'error_malformed_message':'dispatch'(Selector, Args, State)
    of Result -> Result
    catch <Type, Error, _Stacktrace> -> {'error', {Type, Error}, State}


'dispatch'/3 = fun (Selector, Args, State) ->
    case Selector of
        <OtherSelector> when 'true' ->
            %% Try doesNotUnderstand:args: fallback (BT-29)
            let DnuSelector = 'doesNotUnderstand:args:' in
            let Methods = call 'maps':'get'('__methods__', State) in
            case call 'maps':'is_key'(DnuSelector, Methods) of
                <'true'> when 'true' ->
                    %% Call doesNotUnderstand:args: with [Selector, Args]
                    call 'error_malformed_message':'dispatch'(DnuSelector, [OtherSelector, Args], State)
                <'false'> when 'true' ->
                    %% No DNU handler - return unknown_message error
                    let ClassName = call 'maps':'get'('__class__', State) in
                    {'error', {'unknown_message', OtherSelector, ClassName}, State}
            end
    end


'method_table'/0 = fun () ->
    ~{}~

end
